# deep-eagle

./: .gitignore  CLAUDE.md  CLOUD_DEPLOYMENT_SUMMARY.md  PROJECT_STRUCTURE.md  QUICKSTART.md  README.md  SPORTS_PREDICTION_GUIDE.md  __init__.py  config_template.yaml  pyproject.toml  requirements.txt  setup.py  sports_prediction_config.yaml
.github/workflows/: ci.yml
config/: config_manager.py
core/: __init__.py
core/features/: __init__.py  feature_engine.py  transforms.py
core/models/: __init__.py  base_model.py  ensemble.py  gru.py  lstm.py  transformer.py
core/training/: __init__.py  callbacks.py  trainer.py
core/utils/: __init__.py  checkpoint.py  deprecation.py  feature_importance.py  helpers.py
core/validation/: time_series_split.py
examples/: sports_prediction_example.py
examples/real_estate/: IDEAS.md
examples/sports_analytics/: custom_features.py  train.py
examples/stock_prediction/: train.py
tests/: conftest.py  test_auth.py  test_basic.py  test_callbacks.py  test_ensemble.py  test_trainer.py  test_training_page.py  test_validation.py
tools/: README.md  scan_usage.py
web_ui/: .gitignore  DEPLOYMENT.md  QUICKSTART.md  README.md  app.py  auth.py  launch.bat  packages.txt  requirements.txt  start.bat  start.sh
web_ui/.streamlit/: config.toml
web_ui/pages/: __init__.py  dataset_manager.py  home.py  model_builder.py  prediction.py  project_scanner.py  results.py  settings.py  training.py
web_ui/utils/: __init__.py
