[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "deep-timeseries"
version = "0.1.0"
description = "A modular deep learning framework for time-series analysis"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Josh McKay" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "torch>=2.0.0",
    "numpy>=1.26.0",
    "pandas>=2.2.0",
    "scikit-learn>=1.4.0",
    "pyyaml>=6.0",
    "tqdm>=4.65.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.6.0",
]
# Dashboard / web UI dependencies (Streamlit app + auth)
web = [
    "streamlit>=1.28.0",
    "plotly>=5.17.0",
    "bcrypt>=4.0.0",
]

[tool.setuptools.packages.find]
# Library surface is the importable `core` package (matches the previous
# find_packages() behaviour). The web_ui app and config/ run from the repo root.
include = ["core*"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
# E/F: pyflakes+pycodestyle, I: isort, UP: pyupgrade, B: bugbear, FA: future-annotations
select = ["E", "F", "I", "UP", "B", "FA"]
ignore = [
    "E501",  # line length is handled by the formatter
    "B008",  # function calls in argument defaults (common in torch/streamlit)
]

[tool.ruff.lint.per-file-ignores]
"**/__init__.py" = ["F401"]  # re-exports for the public API
"tests/**" = ["F401", "F811"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
